docs/v7.1/properties/P134.md
---
layout: page
title: P134 a continué (a été continué par)
titleEn: P134 continued (was continued by) - a continué (a été continué par)
permalink: /v7.1/proprietes/P134
sidebar: v71
group: proprietes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Domaine</strong></td>
<td class="en">
<p>E7 Activity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> </p>
</td>
</tr>
<tr>
<td><strong>Portée</strong></td>
<td class="en">
<p>E7 Activity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> </p>
</td>
</tr>
<tr>
<td><strong>Sous-propriété de</strong></td>
<td class="en">
<p>E7 Activity. P15 was influenced by (influenced): E1 CRM Entity</p>
<p>E2 Temporal Entity. P174 starts before the end of (ends after the start of): E2 Temporal Entity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> . <code class="language-plaintext highlighter-rouge">P15_a_été_influencé_par (a_influencé)</code> : <code class="language-plaintext highlighter-rouge">E1_Entité_CRM</code> </p>
<p><code class="language-plaintext highlighter-rouge">E2_Entité_temporelle</code> . <code class="language-plaintext highlighter-rouge">P174_commence_avant_la_fin_de (se_termine_après_le_début_de)</code> : <code class="language-plaintext highlighter-rouge">E2_Entité_temporelle</code> </p>
</td>
</tr>
<tr>
<td><strong>Super-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Quantification</strong></td>
<td class="en">
<p>many to many (0,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs (0,n:0,n)</p>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This property associates two instances of E7 Activity, where the domain is considered as an intentional continuation of the range. </p>
<p>A continuation of an activity may happen when the continued activity is still ongoing or after the continued activity has completely ended. The continuing activity may have started already before it decided to continue the other one. Continuation implies a coherence of intentions and outcomes of the involved activities.</p>
<p>This property is not transitive.</p>
</td>
<td>
<p>Cette propriété associe deux instances de <code class="language-plaintext highlighter-rouge">E7_Activité</code> lorsque le domaine de la propriété est considéré être une continuation intentionnelle de sa portée. </p>
<p>La continuation d’une activité peut se produire soit lorsque cette dernière est toujours en cours, soit après que cette activité ait complètement pris fin. Une activité en cours peut avoir commencé avant d’être devenue une continuation d’une autre activité. La continuation suppose une cohérence dans les intentions et les résultats attendus des activités impliquées. </p>
<p>Cette propriété n’est pas transitive. </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>the construction of the Kölner Dom (Cologne Cathedral) (E7), abandoned in the 15th century, <em>was</em> <em>continued by </em>construction in the 19th century adapting the initial plans so as to preserve the intended appearance (E7) (Wolff, 1999)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>La construction de la cathédrale de Cologne (<code class="language-plaintext highlighter-rouge">E7_Activité</code>), abandonnée au XV<sup>e</sup> siècle, a repris (<code class="language-plaintext highlighter-rouge">P134_a_continué</code>) au XIX<sup>e</sup> siècle avec l’adaptation des plans initiaux afin de préserver l’apparence prévue du bâtiment (<code class="language-plaintext highlighter-rouge">E7_Activité</code>) (Wolff, 1999)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>P134(x,y) ⇒ E7(x)</p>
<p>P134(x,y)⇒ E7(y)</p>
<p>P134(x,y) ⇒ P15(x,y)</p>
<p>P134(x,y) ⇒ P174(x,y)</p>
</td>
<td>
<p>P134(x,y) ⇒ E7(x)</p>
<p>P134(x,y)⇒ E7(y)</p>
<p>P134(x,y) ⇒ P15(x,y)</p>
<p>P134(x,y) ⇒ P174(x,y)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
