docs/v7.1.2/properties/P134.md
---
layout: page
title: P134 a continué (a été continué par)
titleEn: P134 continued (was continued by) - a continué (a été continué par)
permalink: /v7.1.2/proprietes/P134
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E7 Activity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E7 Activity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
<p>E7 Activity. P15 was influenced by (influenced): E1 CRM Entity</p>
<p>E2 Temporal Entity. P176i starts after the start of (starts before the start of): E2 Temporal Entity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> . <code class="language-plaintext highlighter-rouge">P15_a_été_influencé_par (a_influencé)</code> : <code class="language-plaintext highlighter-rouge">E1_Entité_CRM</code> </p>
<p><code class="language-plaintext highlighter-rouge">E2_Entité_temporelle</code> . <code class="language-plaintext highlighter-rouge">P176i_commence_après_le_début_de (commence_avant_le_début_de)</code> : <code class="language-plaintext highlighter-rouge">E2_Entité_temporelle</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>many to many (0,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs (0,n:0,n)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property associates two instances of E7 Activity, where the domain is considered as an intentional continuation of the range. </p>
<p>A continuation of an activity may happen when the continued activity is still ongoing or after the continued activity has completely ended. The continuing activity may have started already before it decided to continue the other one. Continuation implies a coherence of intentions and outcomes of the involved activities.</p>
<p>This property is not transitive. This property is asymmetric.</p>
</td>
<td>
<p>Cette propriété associe deux instances de <code class="language-plaintext highlighter-rouge">E7_Activité</code> lorsque le domaine de la propriété est considéré être une continuation intentionnelle de sa portée. </p>
<p>La continuation d’une activité peut se produire soit lorsque cette dernière est toujours en cours, soit après que cette activité a complètement pris fin. Une activité en cours peut avoir commencé avant d’être devenue une continuation d’une autre activité. La continuation suppose une cohérence dans les intentions et les résultats attendus des activités impliquées. </p>
<p>Cette propriété n’est pas transitive et est asymétrique. </p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>The construction of the Kölner Dom (Cologne Cathedral) , abandoned in the 15th century (E7), was continued by construction in the 19th century (E7). [The construction in the 19th century adapted the initial plans so as to preserve the intended appearance.] (Wolff, 1999)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>La construction de la cathédrale de Cologne (<code class="language-plaintext highlighter-rouge">E7_Activité</code>), abandonnée au XV<sup>e</sup> siècle, a repris (<code class="language-plaintext highlighter-rouge">P134_a_continué</code>) au XIX<sup>e</sup> siècle (<code class="language-plaintext highlighter-rouge">E7_Activité</code>) [avec l’adaptation des plans initiaux afin de préserver l’apparence prévue du bâtiment] (Wolff, 1999)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P134(x,y) ⇒ E7(x)</p>
<p>P134(x,y)⇒ E7(y) </p>
<p>P134(x,y) ⇒ P15(x,y)</p>
<p>P134(x,y) ⇒ P176i(x,y)</p>
<p>P134(x,y) ⇒ ¬P134(y,x)</p>
</td>
<td>
<p>P134(x,y) ⇒ E7(x)</p>
<p>P134(x,y)⇒ E7(y) </p>
<p>P134(x,y) ⇒ P15(x,y)</p>
<p>P134(x,y) ⇒ P176i(x,y)</p>
<p>P134(x,y) ⇒ ¬P134(y,x)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
